--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
-<%= @user %><br/>
 <%= @user.profile.first_name %> <%= @user.profile.last_name %>  
 <%= @user.profile.job_title %><br/>
-<%= @user.profile.phone_number %><br/>
-<%= @user.profile.contact_email %><br/>
+<% if current_user.plan_id == 2 %>
+    <%= @user.profile.phone_number %><br/>
+    <%= @user.profile.contact_email %><br/>
+<% end %>
 <%= @user.profile.description %><br/>
