handling error in show.html.erb file

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
          <% @users.each do |user| %>
          <% if user.profile %>
         <li>
-            <div class="well row <%= cycle('white-bg','')%>">
+            <div class="well row <%= cycle('white-bg','') %>">
                 <div class="col-sm-4 text-center">
                     <% if user.profile.avatar %>
                        <%= link_to user do %>
@@ -17,7 +17,7 @@
                      <%= link_to user do %>
                       <h2> <%= user.profile.first_name %> <%= user.profile.last_name %></h2>
                       <% end %>
-                      <p><%= user.profile.job_title %>
+                      <p><%= user.profile.job_title %></p>
                   </div>
                  </li>
                 <% end %>
